# event-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.py
event_engine/: __init__.py  base.py  event.py  event_manager.py  exceptions.py  kafka_consumer.py  kafka_producer.py  log_config.py  observable.py  observer.py  shutdownable.py  telemetry.py
event_engine/kafka/: __init__.py  base.py  deserializer.py  exceptions.py  kafka_bus.py  kafka_consumer.py  kafka_producer.py  serializer.py
event_engine_async/: __init__.py  base.py  event.py  event_manager.py  kafka_config.py  kafka_consumer.py  kafka_producer.py  observable.py  observer.py
examples/: consume.py  consume_by_pattern.py  event_manager.py  events.py  kafka_settings.py  produce.py
kafka_docker/: docker-compose.yml
tests/: test_ee_consumer.py  test_event_engine.py  test_events.py
tests/fixtures/: event.py
