[project]
name = "event-engine"
description = "event driven framework"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0 license"
authors = [
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry]
name = "event-engine"
version = "0.2.1"
description = ""
authors = []

[tool.poetry.dependencies]
msgpack = { version = "*", optional = true }
aiokafka = { version = "^0.12.0", optional = true }
pydantic = "^2.0.0"
opentelemetry-sdk = "*"

[tool.poetry.extras]
kafka = ["aiokafka", "msgpack"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
